tests/fail/dif_sizes.us
fn main<T>(a:i32) -> u8 {
    a;
}

